# knowdit

./: .envrc  .gitignore  Cargo.toml  Readme.md
.github/workflows/: ci.yaml
crates/knowdit/: Cargo.toml
crates/knowdit-kg/: Cargo.toml
crates/knowdit-kg-model/: Cargo.toml
crates/knowdit-kg-model/src/model/: audit_finding.rs  audit_finding_category.rs  category.rs  finding_category.rs  finding_link_status.rs  finding_merge.rs  mod.rs  project.rs  project_category.rs  project_platform.rs  semantic_finding_link.rs  semantic_function.rs  semantic_merge.rs  semantic_node.rs  semantic_node_category.rs
crates/knowdit-kg/src/: category.rs  db.rs  error.rs  knowledge_graph.rs  learn.rs  lib.rs  link.rs  project_loader.rs  prompts.rs  vulnerability.rs
crates/knowdit/src/: main.rs
crates/knowdit/src/cmd/: db_snapshot_format.rs  export_dot.rs  export_html.rs  finding_link_args.rs  import_db_snapshot.rs  init_db.rs  learn.rs  link.rs  list_projects.rs  list_semantics.rs  merge_args.rs  mod.rs  reset_linking.rs  search_semantics.rs  set_platform_id.rs  snapshot_db.rs  validate_db.rs
