[package]
name = "knowdit-kg-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sea-orm.workspace = true
serde.workspace = true