[package]
name = "knowdit-kg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sea-orm.workspace = true
knowdit-kg-model = { path = "../knowdit-kg-model" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
llmy.workspace = true
tracing.workspace = true
thiserror.workspace = true
itertools.workspace = true
color-eyre.workspace = true
async-channel.workspace = true
